syntax = "proto3";
package rarimo.rarimocore.cbank;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cbank/params.proto";
import "cbank/commitment.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/rarimo/rarimo-core/x/cbank/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/cbank/params";
  }

  rpc CommitmentAll(QueryGetAllCommitmentRequest) returns (QueryGetAllCommitmentResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/cbank/commitment";
  }

  rpc Commitment(QueryGetCommitmentRequest) returns (QueryGetCommitmentResponse) {
    option (google.api.http).get = "/rarimo/rarimo-core/cbank/commitment/{index}";
  }

  // this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetAllCommitmentRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryGetAllCommitmentResponse {
  repeated rarimo.rarimocore.cbank.Commitment commitment = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetCommitmentRequest {
  // compressed form point
  string index = 1;
}

message QueryGetCommitmentResponse {
  rarimo.rarimocore.cbank.Commitment commitment = 1 [(gogoproto.nullable) = false];
}

// this line is used by starport scaffolding # 3
